Proper send model